# ProgressProject

./: CMakeLists.txt  README.md  vcpkg.json
headers/: Finally.h  auth.h  userCommands.h  util.h
src/: auth.cpp  main.cpp  userCommands.cpp
